# SinglyLinkedList

./: .gitignore  CMakeLists.txt  README.md  SLinkedList.h  main.cpp
tests/: test_SLinkedList.cpp
